Update profil page with new vision, mission, and images
Added new images for Bupati/Wabup and Merangin, updated the 'Visi dan Misi' section with current information and structure, and introduced new sections for Struktur Organisasi and Tupoksi in profil.html. Enhanced CSS for new content, improved layout and typography, and adjusted transitions for better user experience.

--- a/profil.html
+++ b/profil.html
@@ -87,15 +87,28 @@
 <!------------------- CONTENT ----------------------------------->
 
 <div class="visiMisi" id="visiMisi">
-	<h2> Visi dan Misi<br><p>BKPSDMD Kabupaten Merangin</p></h2>
-	
-	<p>Assalamu'alaikum Warahmatullahi Wabarakaatuh</p>
-	<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed velit massa, scelerisque id tristique non, scelerisque sed ex. Etiam eget fermentum augue. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Quisque interdum ligula neque. Morbi sit amet dui tristique orci facilisis tristique. Phasellus nisl quam, tincidunt ut lectus vitae, dapibus faucibus eros. Sed imperdiet sed est vehicula efficitur. Praesent ultricies non ipsum at sagittis. Donec scelerisque ligula eget hendrerit molestie.</p>
-	
-	<p>Nunc nec efficitur justo, et consequat libero. Etiam malesuada metus et dapibus convallis. Nam semper id diam sed finibus. Sed at risus vehicula, condimentum lorem in, cursus ante. Proin efficitur felis ac massa vestibulum ultricies. Phasellus a gravida nisl. Cras euismod mi et laoreet laoreet. Vivamus quis tortor blandit, semper ipsum non, molestie lorem. Aliquam hendrerit est ipsum, sit amet volutpat eros semper sit amet. Mauris in nunc mollis, feugiat lorem eget, efficitur elit. Sed leo nisl, feugiat non suscipit sit amet, vestibulum eleifend diam. Aliquam accumsan odio eget tempor lacinia.</p>
-	
-	<p>Wassalamu'alaikum Warahmatullahi Wabarakaatuh.</p>
-	
+	<h1>Visi dan Misi<br><p>Pemerintah Kabupaten Merangin</p></h1>
+	<img src="images/MeranginBaru.png" class="meranginBaru" style="width: 200px">
+	<p>Visi dan Misi pasangan Bupati dan Wakil Bupati Terpilih, yaitu H. M. Syukur, S.H., M.H., dan Drs. Abdul Khafidh, M.M., yang telah dilantik secara sah sebagai Bupati dan Wakil Bupati pada tanggal 20 Februari 2025. Oleh karena itu, berdasarkan pada permasalahan pembangunan, serta isu strategis, dengan berpegang pada Visi RPJPD Kabupaten Merangin tahun 2025-2045, maka disusun sebuah cita-cita atau Visi pembangunan masyarakat Merangin dalam periode 2025-2029.</p>
+	<img src="images/Foto-Bupati_Wabup.png" class="bupatiWabup" style="width: 400px">
+	<h2>Visi</h2>
+	<h3>"MENUJU MERANGIN BARU 2030"</h3>
+	<h4>Dengan semangat BARU, Merangin Berdaya Saing, Akuntabel,  Reformis dan Unggul</h4>
+	<ol>
+		<li><b>Berdaya saing</b>, artinya Kabupaten Merangin yang kaya akan Potensi sumber daya alam dan sumber daya manusia, harus dibangun dengan konsep berkelanjutan dan terencana dengan baik, fokus dan tuntas agar memiliki daya saing antar daerah khususnya di Provinsi Jambi.</li>
+		<li><b>Akuntabel</b>, artinya Pemerintah Daerah harus bekerja dengan bertanggung jawab atas amanah yang diberikan oleh masyarakat Kabupaten Merangin dalam rangka melayani masyarakat, Pemerintah Daerah harus selalu hadir saat dibutuhkan masyarakat.</li>
+		<li><b>Reformis</b>, Pemerintah Kabupaten Merangin harus berani mereformasi kinerja Pemerintah Daerah sesuai potensi dan keunggulan daerah dan dimulai dari kompetensi Aparatur dan dan sistem Merit dan perencanaan berbasis Proses bisnis. </li>
+		<li><b>Unggul</b>, Pemerintah Kabupaten Merangin harus memiliki Program Prioritas dan tepat sasaran agar Program Pembangunan berjalan sesuai proses bisnis Perencanaan untuk Merangin Unggul.</li>
+	</ol>
+
+	<h2>Misi</h2>
+	<p>Merujuk pada hasil pemetaan Misi berdasarkan pokok-pokok Visi di atas, maka dihasilkan empat Misi Kepala Daerah Kabupaten Merangin selama tahun 2025-2029 sebagai berikut.</p>
+	<ul>
+	  <li><b>Misi 1: </b>Mengembangkan Sumber daya manusia Merangin yang Unggul dan berbudaya. </li>
+	  <li><b>Misi 2: </b>Memantapkan infrastruktur daerah. </li>
+	  <li><b>Misi 3: </b>Mewujudkan Perekonomian Daerah yang inklusif dengan skema Ekonomi Hijau (Green Economic) berbasis Keunggulan Daerah (Pertanian, Pariwisata dan UMKM). </li>
+	  <li><b>Misi 4: </b>Membangun Tata kelola Pemerintahan yang baik dan bersih untuk peningkatan kualitas pelayanan masyarakat (berbasis teknologi informasi 5.0).</li>
+	</ul>  
 </div>
 	
 <div class="selaPang" id="selaPang">
@@ -104,17 +117,30 @@
 	<p>Assalamu'alaikum Warahmatullahi Wabarakaatuh</p>
 	<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed velit massa, scelerisque id tristique non, scelerisque sed ex. Etiam eget fermentum augue. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Quisque interdum ligula neque. Morbi sit amet dui tristique orci facilisis tristique. Phasellus nisl quam, tincidunt ut lectus vitae, dapibus faucibus eros. Sed imperdiet sed est vehicula efficitur. Praesent ultricies non ipsum at sagittis. Donec scelerisque ligula eget hendrerit molestie.</p>
 	
-	<p>Nunc nec efficitur justo, et consequat libero. Etiam malesuada metus et dapibus convallis. Nam semper id diam sed finibus. Sed at risus vehicula, condimentum lorem in, cursus ante. Proin efficitur felis ac massa vestibulum ultricies. Phasellus a gravida nisl. Cras euismod mi et laoreet laoreet. Vivamus quis tortor blandit, semper ipsum non, molestie lorem. Aliquam hendrerit est ipsum, sit amet volutpat eros semper sit amet. Mauris in nunc mollis, feugiat lorem eget, efficitur elit. Sed leo nisl, feugiat non suscipit sit amet, vestibulum eleifend diam. Aliquam accumsan odio eget tempor lacinia.</p>
-	
 	<p>Wassalamu'alaikum Warahmatullahi Wabarakaatuh.</p>
 	
 </div>
 	
 <div class="sejarah" id="sejarah">
 	<h2> Sejarah<br><p>BKPSDMD Kabupaten Merangin</p></h2>
-
-	<p>Assalamu'alaikum Warahmatullahi Wabarakaatuh</p>
-	<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed velit massa, scelerisque id tristique non, scelerisque sed ex. Etiam eget fermentum augue. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Quisque interdum ligula neque. Morbi sit amet dui tristique orci facilisis tristique. Phasellus nisl quam, tincidunt ut lectus vitae, dapibus faucibus eros. Sed imperdiet sed est vehicula efficitur. Praesent ultricies non ipsum at sagittis. Donec scelerisque ligula eget hendrerit molestie.</p>
+	
+	<p>Nunc nec efficitur justo, et consequat libero. Etiam malesuada metus et dapibus convallis. Nam semper id diam sed finibus. Sed at risus vehicula, condimentum lorem in, cursus ante. Proin efficitur felis ac massa vestibulum ultricies. Phasellus a gravida nisl. Cras euismod mi et laoreet laoreet. Vivamus quis tortor blandit, semper ipsum non, molestie lorem. Aliquam hendrerit est ipsum, sit amet volutpat eros semper sit amet. Mauris in nunc mollis, feugiat lorem eget, efficitur elit. Sed leo nisl, feugiat non suscipit sit amet, vestibulum eleifend diam. Aliquam accumsan odio eget tempor lacinia.</p>
+	
+	<p>Wassalamu'alaikum Warahmatullahi Wabarakaatuh.</p>
+	
+</div>
+	
+<div class="strukOrga" id="strukOrga">
+	<h2> Struktur Organisasi<br><p>BKPSDMD Kabupaten Merangin</p></h2>
+	
+	<p>Nunc nec efficitur justo, et consequat libero. Etiam malesuada metus et dapibus convallis. Nam semper id diam sed finibus. Sed at risus vehicula, condimentum lorem in, cursus ante. Proin efficitur felis ac massa vestibulum ultricies. Phasellus a gravida nisl. Cras euismod mi et laoreet laoreet. Vivamus quis tortor blandit, semper ipsum non, molestie lorem. Aliquam hendrerit est ipsum, sit amet volutpat eros semper sit amet. Mauris in nunc mollis, feugiat lorem eget, efficitur elit. Sed leo nisl, feugiat non suscipit sit amet, vestibulum eleifend diam. Aliquam accumsan odio eget tempor lacinia.</p>
+	
+	<p>Wassalamu'alaikum Warahmatullahi Wabarakaatuh.</p>
+	
+</div>
+	
+<div class="tuPoksi" id="tuPoksi">
+	<h2> Tugas Pokok dan Fungsi<br><p>BKPSDMD Kabupaten Merangin</p></h2>
 	
 	<p>Nunc nec efficitur justo, et consequat libero. Etiam malesuada metus et dapibus convallis. Nam semper id diam sed finibus. Sed at risus vehicula, condimentum lorem in, cursus ante. Proin efficitur felis ac massa vestibulum ultricies. Phasellus a gravida nisl. Cras euismod mi et laoreet laoreet. Vivamus quis tortor blandit, semper ipsum non, molestie lorem. Aliquam hendrerit est ipsum, sit amet volutpat eros semper sit amet. Mauris in nunc mollis, feugiat lorem eget, efficitur elit. Sed leo nisl, feugiat non suscipit sit amet, vestibulum eleifend diam. Aliquam accumsan odio eget tempor lacinia.</p>
 	
