Update visiMisi section styles and structure
Adjusted HTML structure in profil.html by moving the mission statement into a <p> inside the <h3> tag and resizing images for better layout. Updated profil.css to improve text alignment, line height, and padding for better readability in the visiMisi section.

--- a/profil.html
+++ b/profil.html
@@ -88,12 +88,12 @@
 
 <div class="visiMisi" id="visiMisi">
 	<h1>Visi dan Misi<br><p>Pemerintah Kabupaten Merangin</p></h1>
-	<img src="images/MeranginBaru.png" class="meranginBaru" style="width: 200px">
+	<img src="images/MeranginBaru.png" class="meranginBaru" style="width: 150px">
 	<p>Visi dan Misi pasangan Bupati dan Wakil Bupati Terpilih, yaitu H. M. Syukur, S.H., M.H., dan Drs. Abdul Khafidh, M.M., yang telah dilantik secara sah sebagai Bupati dan Wakil Bupati pada tanggal 20 Februari 2025. Oleh karena itu, berdasarkan pada permasalahan pembangunan, serta isu strategis, dengan berpegang pada Visi RPJPD Kabupaten Merangin tahun 2025-2045, maka disusun sebuah cita-cita atau Visi pembangunan masyarakat Merangin dalam periode 2025-2029.</p>
-	<img src="images/Foto-Bupati_Wabup.png" class="bupatiWabup" style="width: 400px">
+	<img src="images/Foto-Bupati_Wabup.png" class="bupatiWabup" style="width: 350px">
 	<h2>Visi</h2>
-	<h3>"MENUJU MERANGIN BARU 2030"</h3>
-	<h4>Dengan semangat BARU, Merangin Berdaya Saing, Akuntabel,  Reformis dan Unggul</h4>
+	<h3>"MENUJU MERANGIN BARU 2030"<p>Dengan semangat BARU, Merangin Berdaya Saing, Akuntabel,  Reformis dan Unggul</p></h3>
+	
 	<ol>
 		<li><b>Berdaya saing</b>, artinya Kabupaten Merangin yang kaya akan Potensi sumber daya alam dan sumber daya manusia, harus dibangun dengan konsep berkelanjutan dan terencana dengan baik, fokus dan tuntas agar memiliki daya saing antar daerah khususnya di Provinsi Jambi.</li>
 		<li><b>Akuntabel</b>, artinya Pemerintah Daerah harus bekerja dengan bertanggung jawab atas amanah yang diberikan oleh masyarakat Kabupaten Merangin dalam rangka melayani masyarakat, Pemerintah Daerah harus selalu hadir saat dibutuhkan masyarakat.</li>
