Update profil and sejarah sections with new images and content
Added new images (Kantor-BKD-Lama.png, TuguPedang.jpg) and updated profil.html to include more detailed descriptions for the 'Selayang Pandang' and 'Sejarah' sections. Improved layout and styling in profil.css for better readability and responsiveness. Minor fixes in index.html to comment out unused canvas elements.

--- a/profil.html
+++ b/profil.html
@@ -92,7 +92,7 @@
 	<p>Visi dan Misi pasangan Bupati dan Wakil Bupati Terpilih, yaitu H. M. Syukur, S.H., M.H., dan Drs. Abdul Khafidh, M.M., yang telah dilantik secara sah sebagai Bupati dan Wakil Bupati pada tanggal 20 Februari 2025. Oleh karena itu, berdasarkan pada permasalahan pembangunan, serta isu strategis, dengan berpegang pada Visi RPJPD Kabupaten Merangin tahun 2025-2045, maka disusun sebuah cita-cita atau Visi pembangunan masyarakat Merangin dalam periode 2025-2029.</p>
 	<img src="images/Foto-Bupati_Wabup.png" class="bupatiWabup" style="width: 350px">
 	<h2>Visi</h2>
-	<h3>"MENUJU MERANGIN BARU 2030"<p>Dengan semangat BARU, Merangin Berdaya Saing, Akuntabel,  Reformis dan Unggul</p></h3>
+	<h3>"MENUJU MERANGIN BARU 2030"<p>Dengan semangat BARU, Merangin Berdaya saing, Akuntabel,  Reformis dan Unggul</p></h3>
 	
 	<ol>
 		<li><b>Berdaya saing</b>, artinya Kabupaten Merangin yang kaya akan Potensi sumber daya alam dan sumber daya manusia, harus dibangun dengan konsep berkelanjutan dan terencana dengan baik, fokus dan tuntas agar memiliki daya saing antar daerah khususnya di Provinsi Jambi.</li>
@@ -112,21 +112,23 @@
 </div>
 	
 <div class="selaPang" id="selaPang">
-	<h2> Selayang Pandang<br><p>BKPSDMD Kabupaten Merangin</p></h2>
-
-	<p>Assalamu'alaikum Warahmatullahi Wabarakaatuh</p>
-	<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed velit massa, scelerisque id tristique non, scelerisque sed ex. Etiam eget fermentum augue. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Quisque interdum ligula neque. Morbi sit amet dui tristique orci facilisis tristique. Phasellus nisl quam, tincidunt ut lectus vitae, dapibus faucibus eros. Sed imperdiet sed est vehicula efficitur. Praesent ultricies non ipsum at sagittis. Donec scelerisque ligula eget hendrerit molestie.</p>
+	<h1>Selayang Pandang<br><p>BKPSDMD Kabupaten Merangin</p></h1>
+	<img src="images/TuguPedang.jpg" class="TuguPedang" alt="Tugu Pedang">
+	<p>Badan Kepegawaian dan Pengembangan Sumber Daya Manusia Daerah (BKPSDMD) Kabupaten Merangin merupakan perangkat daerah yang memiliki peran strategis dalam pengelolaan manajemen aparatur sipil negara (ASN). BKPSDMD bertugas menyelenggarakan fungsi di bidang kepegawaian, pembinaan, serta pengembangan kapasitas sumber daya manusia aparatur, guna mendukung terciptanya aparatur yang profesional, berintegritas, dan berdaya saing.</p>
+	<p>Sebagai instansi teknis, BKPSDMD Kabupaten Merangin melaksanakan berbagai layanan seperti perencanaan kebutuhan pegawai, pengadaan, mutasi dan promosi jabatan, pengembangan kompetensi, penilaian kinerja, serta urusan administrasi kepegawaian lainnya sesuai ketentuan peraturan perundang-undangan.</p>
+	<p>Dalam upaya meningkatkan kualitas pelayanan publik, BKPSDM juga berkomitmen melakukan inovasi, transparansi, dan pemanfaatan teknologi informasi untuk mendukung terciptanya tata kelola pemerintahan yang baik (good governance). Dengan dukungan aparatur yang kompeten, BKPSDM Kabupaten Merangin berperan penting dalam mewujudkan visi pembangunan daerah yang maju, mandiri, dan berdaya saing.</p>
 	
-	<p>Wassalamu'alaikum Warahmatullahi Wabarakaatuh.</p>
 	
 </div>
 	
 <div class="sejarah" id="sejarah">
-	<h2> Sejarah<br><p>BKPSDMD Kabupaten Merangin</p></h2>
-	
-	<p>Nunc nec efficitur justo, et consequat libero. Etiam malesuada metus et dapibus convallis. Nam semper id diam sed finibus. Sed at risus vehicula, condimentum lorem in, cursus ante. Proin efficitur felis ac massa vestibulum ultricies. Phasellus a gravida nisl. Cras euismod mi et laoreet laoreet. Vivamus quis tortor blandit, semper ipsum non, molestie lorem. Aliquam hendrerit est ipsum, sit amet volutpat eros semper sit amet. Mauris in nunc mollis, feugiat lorem eget, efficitur elit. Sed leo nisl, feugiat non suscipit sit amet, vestibulum eleifend diam. Aliquam accumsan odio eget tempor lacinia.</p>
-	
-	<p>Wassalamu'alaikum Warahmatullahi Wabarakaatuh.</p>
+	<h1> Sejarah<br><p>BKPSDMD Kabupaten Merangin</p></h1>
+	<img src="images/Kantor-BKD-Lama.png" class="Kantor-BKD-Lama" alt="Kantor BKD Lama">
+	<p>Secara historis Badan Kepegawaian Daerah muncul sebagai konsekuensi pelaksanaan otonomi daerah dengan ditetapkannya Undang-Undang Nomor 22 Tahun 1999 sebagaimana telah direvisi dengan Undang-Undang Nomor 34Tahun 2004 tentang Pemerintahan Daerah, di mana dalam salah satu pasalnya mengisyaratkan adanya kewenangan pelaksanaan manajemen kepegawaian daerah.</p>
+	<p>Kelembagaan Badan Kepegawaian Daerah sendiri mulai di sebut untuk pertama kalinya dalam Undang-Undang Nomor 43 Tahun 1999 tentang Perubahan Atas Undang-Undang Nomor 8 Tahun 1974 tentang Pokok-Pokok Kepegawaian, Pasal 34A yang menegaskan: <b>"Untuk kelancaran pelaksanaan manajemen Pegawai Negeri Sipil Daerah dibentuk Badan Kepegawaian Daerah".</b></p>
+	<p>Selanjutnya untuk melaksanakan pembentukan lembaga Badan Kepegawaian Daerah diterbitkan Keputusan Presiden Nomor 159 Tahun 2000 tentang Pedoman Pembentukan Badan Kepegawaian Daerah. </p>
+	<p>Sejalan dengan hal tersebut telah dilaksanakan penataan organisasi perangkat daerah di Jajaran Pemerintah Kabupaten Merangin yang menempatkan fungsi manajemen kepegawaian yang semula dilaksanakan oleh Bagian Kepegawaian pada Sekretariat Daerah, dialihkan kepada lembaga tersendiri yang melaksanakan fungsi manajemen kepegawaian, yaitu Badan Kepegawaian Daerah (Selanjutnya disebut BKD). Oleh karena itu pada tahun 2002 dengan Peraturan Daerah Nomor 05 Tahun 2002 dibentuklah BKD Kabupaten Merangin sebagai salah satu lembaga perangkat daerah Kabupaten Merangin, yang menempati kantor Dinas Tata Kota lama di <b>Jalan Sultan Hasanuddin No. 02 Bangko.</b></p>
+	<p>Pengisian jabatan-jabatan pada BKD Kabupaten Merangin diawali pada tanggal 06 Januari 2003, yaitu dengan dilantiknya <b>Bapak Drs. Sumardi</b>, sebagai Kepala BKD Kabupaten Merangin yang pertama. Momentum inilah yang kemudian menjadi pertimbangan bahwa tanggal 06 Januari setiap tahunnya diperingati sebagai Hari Ulang Tahun BKD Kabupaten Merangin. Sebagai lembaga baru yang mengemban amanat pada pengelolaan manajemen kepegawaian daerah, BKD menata diri dengan melakukan penataan iri baik dari segi sistem, personil maupun pelayanannya dengan mengacu visi dan misinya yang telah ditetapkan dan telah dijabarkan dalam program-program kerjanya. Berdasarkan penjelasan di atas, maka perlu adanya media penyalur informasi tentang pengelolaan manajemen kepegawaian daerah, termasuk salah satunya diwujudkan dalam website ini, untuk disampaikan kepada stakeholder kepegawaian daerah.</p>
 	
 </div>
 	
