Add Struktur Organisasi image and update section styling
Added StrukturOrganisasi.png and updated the Struktur Organisasi section in profil.html to display the image instead of text. Adjusted related CSS for improved layout and responsiveness, including padding, font sizes, and background color changes.

--- a/profil.html
+++ b/profil.html
@@ -133,11 +133,9 @@
 </div>
 	
 <div class="strukOrga" id="strukOrga">
-	<h2> Struktur Organisasi<br><p>BKPSDMD Kabupaten Merangin</p></h2>
+	<h1> Struktur Organisasi<br><p>BKPSDMD Kabupaten Merangin</p></h1>
 	
-	<p>Nunc nec efficitur justo, et consequat libero. Etiam malesuada metus et dapibus convallis. Nam semper id diam sed finibus. Sed at risus vehicula, condimentum lorem in, cursus ante. Proin efficitur felis ac massa vestibulum ultricies. Phasellus a gravida nisl. Cras euismod mi et laoreet laoreet. Vivamus quis tortor blandit, semper ipsum non, molestie lorem. Aliquam hendrerit est ipsum, sit amet volutpat eros semper sit amet. Mauris in nunc mollis, feugiat lorem eget, efficitur elit. Sed leo nisl, feugiat non suscipit sit amet, vestibulum eleifend diam. Aliquam accumsan odio eget tempor lacinia.</p>
-	
-	<p>Wassalamu'alaikum Warahmatullahi Wabarakaatuh.</p>
+	<img src="images/StrukturOrganisasi.png" class="strukOrga" alt="Struktur Organisasi" style="width: 100%;">
 	
 </div>
 	
