--- a/layanan.html
+++ b/layanan.html
@@ -88,28 +88,39 @@
 
 <div class="layananBKN">
 
-	<h1>Layanan BKN<img src="icon/BKN/LogoBKN.png" class="LogoBKN"></h1>
+	<h1>Layanan <img src="icon/BKN/LogoBKN.png" class="LogoBKN" style="vertical-align:middle"></h1>
 	
-	<p><a href="https://asndigital.bkn.go.id/" target="_blank" class="asndigital">
-		<img src="icon/BKN/LogoBKN2.png" alt="Logo BKN" width="100px"></a>ASN DIGITAL</p>
-	
-	<p><a href="https://myasn.bkn.go.id/" target="_blank" class="myasn">
-		<img src="icon/BKN/MyASN.png" alt="Logo BKN" width="100px"></a>MyASN BKN</p>
+	<div class="flex-container">
 
-	<p><a href="https://kinerja.bkn.go.id/" target="_blank" class="ekinerja">
-		<img src="icon/BKN/E-Kinerja.png" alt="Logo BKN" width="100px"></a>EKINERJA BKN</p>
+		<div class="flex-item-one"><p><a href="https://asndigital.bkn.go.id/" target="_blank" class="asndigital">
+		<img src="icon/BKN/LogoBKN2.png" alt="Logo BKN" width="50px"></a><br>ASN DIGITAL</p>
+		</div>
 
-	<p><a href="https://siasn-instansi.bkn.go.id/" target="_blank" class="siasn">
-		<img src="icon/BKN/SIASN.png" alt="Logo BKN" width="100px"></a>SIASN BKN</p>
-	
-	<p><a href="https://perencanaan-siasn.bkn.go.id/" target="_blank" class="hrsiasn">
-		<img src="icon/BKN/SIASN.png" alt="Logo BKN" width="100px"></a>HR SIASN</p>
+		<div class="flex-item-two"><p><a href="https://myasn.bkn.go.id/" target="_blank" class="myasn">
+		<img src="icon/BKN/MyASN.png" alt="Logo BKN" width="100px"></a><br>MyASN BKN</p>
+		</div>
 
-	<p><a href="https://imut.bkn.go.id/" target="_blank" class="imutbkn">
-		<img src="icon/BKN/IMut.png" alt="Logo BKN" width="100px"></a>I-MUT BKN</p>
-	
-	<p><a href="https://sscasn.bkn.go.id/" target="_blank" class="imutbkn">
-		<img src="icon/BKN/SSCASN.png" alt="Logo BKN" width="100px"></a>SSCASN BKN</p>
+		<div class="flex-item-three"><p><a href="https://kinerja.bkn.go.id/" target="_blank" class="ekinerja">
+		<img src="icon/BKN/E-Kinerja.png" alt="Logo BKN" width="100px"></a><br>E-KINERJA BKN</p>
+		</div>
+
+		<div class="flex-item-four"><p><a href="https://siasn-instansi.bkn.go.id/" target="_blank" class="siasn">
+		<img src="icon/BKN/SIASN.png" alt="Logo BKN" width="100px"></a><br>SIASN BKN</p>
+		</div>
+
+		<div class="flex-item-one"><p><p><a href="https://perencanaan-siasn.bkn.go.id/" target="_blank" class="hrsiasn">
+		<img src="icon/BKN/SIASN.png" alt="Logo BKN" width="100px"></a><br>HR SIASN</p>
+		</div>
+
+		<div class="flex-item-two"><p><a href="https://imut.bkn.go.id/" target="_blank" class="imutbkn">
+		<img src="icon/BKN/IMut.png" alt="Logo BKN" width="100px"></a><br>I-MUT BKN</p>
+		</div>
+
+		<div class="flex-item-three"><p><a href="https://sscasn.bkn.go.id/" target="_blank" class="imutbkn">
+		<img src="icon/BKN/SSCASN.png" alt="Logo BKN" width="100px"></a><br>SSCASN BKN</p>
+		</div>
+
+	</div>
 
 </div>
 	
