Improve BKN services UI and add descriptions
Updated layanan.css and profil.css to enhance the visual appearance of BKN service cards, including color, alignment, and hover effects. Modified layanan.html to add descriptive subtexts for each BKN service, providing users with more context about each portal. These changes improve clarity and user experience on the services page.

--- a/layanan.html
+++ b/layanan.html
@@ -93,31 +93,31 @@
 	<div class="flex-container">
 
 		<div class="flex-item-one"><p><a href="https://asndigital.bkn.go.id/" target="_blank" class="asndigital">
-		<img src="icon/BKN/LogoBKN2.png" alt="Logo BKN" width="50px"></a><br>ASN DIGITAL</p>
+		<img src="icon/BKN/LogoBKN2.png" alt="Logo BKN" width="50px"></a><br>ASN DIGITAL<br><sub>Portal ASN Digital</sub></p>
 		</div>
 
 		<div class="flex-item-two"><p><a href="https://myasn.bkn.go.id/" target="_blank" class="myasn">
-		<img src="icon/BKN/MyASN.png" alt="Logo BKN" width="100px"></a><br>MyASN BKN</p>
+		<img src="icon/BKN/MyASN.png" alt="Logo BKN" width="100px"></a><br>MyASN BKN<br><sub>Sistem Kepegawaian Bagi ASN</sub></p>
 		</div>
 
 		<div class="flex-item-three"><p><a href="https://kinerja.bkn.go.id/" target="_blank" class="ekinerja">
-		<img src="icon/BKN/E-Kinerja.png" alt="Logo BKN" width="100px"></a><br>E-KINERJA BKN</p>
+		<img src="icon/BKN/E-Kinerja.png" alt="Logo BKN" width="100px"></a><br>E-KINERJA BKN<br><sub>Sistem Penilaian Kinerja BKN</sub></p>
 		</div>
 
 		<div class="flex-item-four"><p><a href="https://siasn-instansi.bkn.go.id/" target="_blank" class="siasn">
-		<img src="icon/BKN/SIASN.png" alt="Logo BKN" width="100px"></a><br>SIASN BKN</p>
+		<img src="icon/BKN/SIASN.png" alt="Logo BKN" width="100px"></a><br>SIASN BKN<br><sub>Sistem Informasi ASN Pemerintah Daerah</sub></p>
 		</div>
 
 		<div class="flex-item-one"><p><p><a href="https://perencanaan-siasn.bkn.go.id/" target="_blank" class="hrsiasn">
-		<img src="icon/BKN/SIASN.png" alt="Logo BKN" width="100px"></a><br>HR SIASN</p>
+		<img src="icon/BKN/SIASN.png" alt="Logo BKN" width="100px"></a><br>HR SIASN<br><sub>Perencanaan Kebutuhan ASN</sub></p>
 		</div>
 
 		<div class="flex-item-two"><p><a href="https://imut.bkn.go.id/" target="_blank" class="imutbkn">
-		<img src="icon/BKN/IMut.png" alt="Logo BKN" width="100px"></a><br>I-MUT BKN</p>
+		<img src="icon/BKN/IMut.png" alt="Logo BKN" width="100px"></a><br>I-MUT BKN<br><sub>Integrasi Mutasi ASN</sub></p>
 		</div>
 
 		<div class="flex-item-three"><p><a href="https://sscasn.bkn.go.id/" target="_blank" class="imutbkn">
-		<img src="icon/BKN/SSCASN.png" alt="Logo BKN" width="100px"></a><br>SSCASN BKN</p>
+		<img src="icon/BKN/SSCASN.png" alt="Logo BKN" width="100px"></a><br>SSCASN BKN<br><sub>Sistem Seleksi Calon Aparatur Sipil Negara</sub></p>
 		</div>
 
 	</div>
