Add overlay menu and BKD/PSDM service sections
Introduces an overlay menu for displaying images and adds new sections for 'Layanan Kepegawaian' (BKD) and 'Layanan Pengembangan SDM' (PSDM) to layanan.html. Updates layanan.css with styles for the overlay and new service sections. Adds related images for the overlay feature.

--- a/layanan.html
+++ b/layanan.html
@@ -85,7 +85,102 @@
 </div>
 	
 <!------------------------------------------ CONTENT ----------------------------------->
+<div id="myNav" class="overlay">
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+	<div class="overlay-content">
+		<img src="images/LayananKPG/Slide1.PNG"  alt="syaratKarpeg">
+	</div>
+</div>
 
+<div class="layananBKD">
+
+	<h1 class="layananKPG">Layanan Kepegawaian <img src="icon/BKPLogo3.png" class="LogoBKD" style="vertical-align:middle"></h1>
+	
+	<div class="flex-container">
+
+		<div class="flex-item-one" onclick="openNav()"><p><a href="" class="asndigital">
+		<img src="icon/BKN/LogoBKN2.png" alt="Logo BKN" width="50px"></a><br>KARTU PEGAWAI<br><sub>Persyaratan Pembuatan Karpeg</sub></p>
+		</div>
+
+		<div class="flex-item-one"><p><a href="https://asndigital.bkn.go.id/" target="_blank" class="asndigital">
+		<img src="icon/BKN/LogoBKN2.png" alt="Logo BKN" width="50px"></a><br>KARTU SUAMI/ISTRI<br><sub>Persyaratan Pembuatan Karpeg</sub></p>
+		</div>
+
+		<div class="flex-item-one"><p><a href="https://asndigital.bkn.go.id/" target="_blank" class="asndigital">
+		<img src="icon/BKN/LogoBKN2.png" alt="Logo BKN" width="50px"></a><br>KENAIKAN GAJI BERKALA<br><sub>Persyaratan Pembuatan Karpeg</sub></p>
+		</div>
+
+		<div class="flex-item-one"><p><a href="https://asndigital.bkn.go.id/" target="_blank" class="asndigital">
+		<img src="icon/BKN/LogoBKN2.png" alt="Logo BKN" width="50px"></a><br>KENAIKAN JABATAN<br><sub>Persyaratan Pembuatan Karpeg</sub></p>
+		</div>
+
+		<div class="flex-item-one"><p><a href="https://asndigital.bkn.go.id/" target="_blank" class="asndigital">
+		<img src="icon/BKN/LogoBKN2.png" alt="Logo BKN" width="50px"></a><br>MUTASI<br><sub>Persyaratan Pembuatan Karpeg</sub></p>
+		</div>
+
+		<div class="flex-item-one"><p><a href="https://asndigital.bkn.go.id/" target="_blank" class="asndigital">
+		<img src="icon/BKN/LogoBKN2.png" alt="Logo BKN" width="50px"></a><br>KENAIKAN PANGKAT<br><sub>Persyaratan Pembuatan Karpeg</sub></p>
+		</div>
+
+		<div class="flex-item-one"><p><a href="https://asndigital.bkn.go.id/" target="_blank" class="asndigital">
+		<img src="icon/BKN/LogoBKN2.png" alt="Logo BKN" width="50px"></a><br>PEMAKAIAN GELAR PENDIDIKAN<br><sub>Persyaratan Pembuatan Karpeg</sub></p>
+		</div>
+
+		<div class="flex-item-one"><p><a href="https://asndigital.bkn.go.id/" target="_blank" class="asndigital">
+		<img src="icon/BKN/LogoBKN2.png" alt="Logo BKN" width="50px"></a><br>PENINJAUAN MASA KERJA (PMK)<br><sub>Persyaratan Pembuatan Karpeg</sub></p>
+		</div>
+
+		<div class="flex-item-one"><p><a href="https://asndigital.bkn.go.id/" target="_blank" class="asndigital">
+		<img src="icon/BKN/LogoBKN2.png" alt="Logo BKN" width="50px"></a><br>PENSIUN<br><sub>Persyaratan Pembuatan Karpeg</sub></p>
+		</div>
+
+		<div class="flex-item-one"><p><a href="https://asndigital.bkn.go.id/" target="_blank" class="asndigital">
+		<img src="icon/BKN/LogoBKN2.png" alt="Logo BKN" width="50px"></a><br>PENSIUN JANDA/DUDA<br><sub>Persyaratan Pembuatan Karpeg</sub></p>
+		</div>
+
+		<div class="flex-item-one"><p><a href="https://asndigital.bkn.go.id/" target="_blank" class="asndigital">
+		<img src="icon/BKN/LogoBKN2.png" alt="Logo BKN" width="50px"></a><br>PENSIUN ATAS PERMINTAAN SENDIRI<br><sub>Persyaratan Pembuatan Karpeg</sub></p>
+		</div>
+	</div>
+
+	<h1 class="layananPSDM">Layanan Pengembangan SDM <img src="icon/BKPLogo3.png" class="LogoBKD" style="vertical-align:middle"></h1>
+	<div class="flex-container">
+
+		<div class="flex-item-one"><p><a href="https://asndigital.bkn.go.id/" target="_blank" class="asndigital">
+		<img src="icon/BKN/LogoBKN2.png" alt="Logo BKN" width="50px"></a><br>TASPEN<br><sub>Persyaratan Pembuatan Karpeg</sub></p>
+		</div>
+
+		<div class="flex-item-one"><p><a href="https://asndigital.bkn.go.id/" target="_blank" class="asndigital">
+		<img src="icon/BKN/LogoBKN2.png" alt="Logo BKN" width="50px"></a><br>IZIN PERCERAIAN<br><sub>Persyaratan Pembuatan Karpeg</sub></p>
+		</div>
+
+		<div class="flex-item-one"><p><a href="https://asndigital.bkn.go.id/" target="_blank" class="asndigital">
+		<img src="icon/BKN/LogoBKN2.png" alt="Logo BKN" width="50px"></a><br>TUGAS BELAJAR<br><sub>Persyaratan Pembuatan Karpeg</sub></p>
+		</div>
+
+		<div class="flex-item-one"><p><a href="https://asndigital.bkn.go.id/" target="_blank" class="asndigital">
+		<img src="icon/BKN/LogoBKN2.png" alt="Logo BKN" width="50px"></a><br>PENGUSULAN SATYA LENCANA<br><sub>Persyaratan Pembuatan Karpeg</sub></p>
+		</div>
+
+		<div class="flex-item-one"><p><a href="https://asndigital.bkn.go.id/" target="_blank" class="asndigital">
+		<img src="icon/BKN/LogoBKN2.png" alt="Logo BKN" width="50px"></a><br>CUTI BERSALIN<br><sub>Persyaratan Pembuatan Karpeg</sub></p>
+		</div>
+
+		<div class="flex-item-one"><p><a href="https://asndigital.bkn.go.id/" target="_blank" class="asndigital">
+		<img src="icon/BKN/LogoBKN2.png" alt="Logo BKN" width="50px"></a><br>CUTI BESAR<br><sub>Persyaratan Pembuatan Karpeg</sub></p>
+		</div>
+
+		<div class="flex-item-one"><p><a href="https://asndigital.bkn.go.id/" target="_blank" class="asndigital">
+		<img src="icon/BKN/LogoBKN2.png" alt="Logo BKN" width="50px"></a><br>CUTI SAKIT/ALASAN PENTING<br><sub>Persyaratan Pembuatan Karpeg</sub></p>
+		</div>
+
+		<div class="flex-item-one"><p><a href="https://asndigital.bkn.go.id/" target="_blank" class="asndigital">
+		<img src="icon/BKN/LogoBKN2.png" alt="Logo BKN" width="50px"></a><br>CUTI TAHUNAN<br><sub>Persyaratan Pembuatan Karpeg</sub></p>
+		</div>
+
+	</div>
+
+</div>
 <div class="layananBKN">
 
 	<h1>Layanan <img src="icon/BKN/LogoBKN.png" class="LogoBKN" style="vertical-align:middle"></h1>
@@ -122,8 +217,7 @@
 
 	</div>
 
-</div>
-	
+</div>	
 
 <!------------------- FOOTER ----------------------------------->	
 	
@@ -185,6 +279,15 @@
 <!------------------- BATAS AKHIR CONTENT ---------------------------------->
 	
 <script src="JavaScript/topnav.js"></script>
-	
+
+<script>
+function openNav() {
+  document.getElementById("myNav").style.height = "100%";
+}
+
+function closeNav() {
+  document.getElementById("myNav").style.height = "0%";
+}
+</script>	
 </body>
 </html>
